--- a/README
+++ b/README
@@ -10,7 +10,8 @@ try this version: http://chchch.github.com/polypenguin/?as_in=beer
 
 Tested in Chrome and Firefox, probably works in Safari.
 
-<i>
+---
+
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
@@ -19,4 +20,4 @@ the Free Software Foundation, either version 3 of the License, or
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License <http://www.gnu.org> for more details.</i>
+GNU General Public License <http://www.gnu.org> for more details.
